# kal2_trajectory_planner

./: CMakeLists.txt  README.md  package.xml
include/kal2_trajectory_planner/: a_star.hpp  types.hpp
include/kal2_trajectory_planner/internal/: utils.hpp
src/: a_star.cpp
